<resources>
    <string name="app_name">MyTravelDairyJava</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="viewbetalogo">viewbetalogo</string>
    <string name="btnviewplan">btnviewplan</string>
    <string name="btnnewplan" />
    <string name="betatext1">여행계획 및 자료 정리 APP</string>
    <string name="dnattfileicon">dnattfileicon</string>
    <string name="dnattfiletext1">dnattfiletext1</string>
    <string name="testtextview2">testtextView2</string>
    <string name="test">화면전환 test</string>
    <string name="days">기간(Days)</string>
    <string name="editdepart">출발일:YYYY-MM-DD</string>
    <string name="editplanname">여행계획서 이름 입력</string>
    <string name="backbtn">backbtn</string>
    <string name="logotext">MyTravelDairy</string>
    <string name="logo">llogo</string>
    <string name="createbtn">신규생성</string>
    <string name="progressbar"></string>
    <string name="dairytxt2">* 출발일 : 예)2020-10-01</string>
    <string name="dairytxt3"><![CDATA[* 기간 : 숫자 예) 7 <-- 일주일일 경우]]></string>
    <string name="dairytxt1">* 여행계획서이름 : 숫자,문자, _ 만 사용해 주세요</string>
    <string name="dairytxt4">[주의] 기존 DB에 동일한 계획서가 존재 하면 전체 DATA를</string>
    <string name="dairytxt5">        삭제 후 새롭게 DB 테이블이 생성됩니다</string>
    <string name="testText">화면전환...!!!!!</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="main_layout">메인 레이아웃</string>
    <string name="mytraveldairy_beta">MyTravelDairy Beta Ver.</string>
    <string name="maindrawerheader_planname">여행이름표시</string>
    <string name="maindrawerheader_logo">logo</string>
    <string name="menu_ic_setting">설정</string>
    <string name="menu_ic_upload">업로드</string>
    <string name="menu_ic_addplus">새로만들기</string>
    <string name="menu_ic_backup">백업</string>
    <string name="menu_ic_calender">년도별 계획</string>
    <string name="menu_ic_world">국가별 계획</string>
    <string name="menu_ic_detail">세부 일정</string>
    <string name="menu_ic_route">전체 일정</string>
    <string name="menu_ic_bell">오늘 일정</string>
    <string name="menu_ic_dashboard">Dash Board</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="invalidplanname">한영:최소1자이상, 특수문자: \"\_\"\ , 띄어쓰기만 허용합니다</string>
    <string name="invalidplandepartday">날짜가 잘못 입력되었읍니다..</string>
    <string name="invaliddays">3~365일까지 입력이 가능합니다..</string>
    <string name="emailid">메일 아이디</string>
    <string name="password">패스워드 6자 이상</string>
    <string name="newregist">New? 구글 FireBase 메일인증방식 가입..</string>
    <string name="beta_version">Beta Version</string>
    <string name="welcome">Welcome , 여행계획짜기앱(개인용)</string>
    <string name="caution_massage">[확인] : 구글에서 제공하는 FireBase DB 접속을 위해 메일인증 서비스에 가입합니다. 패스워드분실시 FireBase로 요청되여 가입된 메일로 변경요청됩니다. DB에는 메일아이디만 저장되며.패스워드는 구글 FireBase 에서 암호화 관리됩니다.</string>
    <string name="loginbtn">로그인</string>
    <string name="re_password">패스워드재입력</string>
    <!--StartMainScreen 액티비티용 -->
    <string name="sms_Regist">회원가입</string>
    <string name="sms_Login">로그인</string>
    <!--intro_loading 액티비티용 -->
    <string name="Intro_SecondMessage">Beta Ver : My First App</string>
    <string name="Intro_FirstMessage">Welcome !!! My Travel Dairy</string>
    <!--silder 용 문구 -->
    <!--제목-->
    <string name="first_Slide_Title">1. 어디로 떠나 볼까 ?</string>
    <string name="second_Slide_Title">2. 먼저 여행루트를 만들자!</string>
    <string name="third_Slide_Title">3. 여행중 기록을 남기자!</string>
    <string name="fourth_Slide_Title">4. 지출은 얼마? 빠짐없이 다녀 왔을까 ?</string>
    <!--간단설명-->
    <string name="first_Description">여행을 할 국가와 여행지를 정하고, 여행목적이 무엇인지 고민하고 간단한 목표를 작성, 경비계산을 위해 환율정보,기본정보를(항공권,여권,비자..) 기록하자</string>
    <string name="second_Description">여행지가 정해졌으니, 나만의 여행루트를 만들자. 방문할 도시,체류일, 꼭 보아야 할 거리, 해봐야 할 거리를 정하자</string>
    <string name="third_Description">여행도중에 계획은 언제나 변경되고, 더 해지거나 빠진다. 고민 말고 다시 계획하고, 기록을 남기자! 다음 여행자를 위한 정보는 메모나 사진으로 남기도록 하자</string>
    <string name="fourth_Description">이젠 집으로.. 얼마나 지출을까? 정산을 해보자..여행을 마치면 사진 뿐이니 사진도 정리해 두자..미루면 영원히 미뤄진다 </string>

    <!--임시 -->
    <string name="temp_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec tellus et sapien molestie laoreet nec eu risus. Aliquam est velit, sollicitudin id metus vel, molestie eleifend erat. Phasellus non nisl iaculis, porta velit quis, accumsan odio. Etiam vel erat sit amet enim sagittis finibus. Nam convallis justo tempus, accumsan urna nec, aliquet leo. Suspendisse consectetur iaculis nunc, eu hendrerit sem rutrum gravida. Aliquam sagittis nisi erat, at finibus libero accumsan rhoncus.

Vivamus lobortis in augue ac tristique. Donec in lacus et mi dignissim lobortis. Suspendisse felis massa, imperdiet et leo in, porttitor tristique erat. Morbi lobortis fermentum ex in sollicitudin. Fusce accumsan massa a pulvinar fringilla. Proin mattis fringilla velit, quis consequat dolor lobortis eget. Fusce ullamcorper pharetra augue sit amet ornare. Maecenas sit amet nibh velit. Vestibulum consequat, lorem a fermentum malesuada, enim tellus varius lacus, a congue tellus diam in ante. Fusce dapibus nisi nec convallis aliquet. Fusce aliquam tellus sit amet augue condimentum pharetra. Sed luctus sapien et risus accumsan tristique vel sed tellus. Phasellus ut lectus maximus, eleifend velit non, sodales ante. Nullam porttitor eu est nec rutrum. Donec euismod neque non felis vestibulum porttitor.

Sed non ipsum gravida, bibendum nunc sed, vestibulum nisl. Fusce arcu enim, tempor eget maximus at, pulvinar quis mauris. Aliquam placerat vitae mi sit amet tincidunt. Praesent aliquet orci eros, id lacinia massa pellentesque a. Nulla semper non dolor ultricies luctus. Duis et consequat ante. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam id ipsum est.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
